--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.13.5",
     "hono": "^4.5.5",
     "lucide-react": "^0.456.0",
     "next": "^14.2.8",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-syntax-highlighter": "^15.6.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -37,6 +39,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9.14.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
