--- a/package.json
+++ b/package.json
@@ -12,25 +12,31 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.4",
+    "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.23",
     "@upstash/redis": "^1.34.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.13.5",
     "hono": "^4.5.5",
     "lucide-react": "^0.456.0",
-    "next": "^14.2.8",
+    "next": "^15.1.4",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
     "react-syntax-highlighter": "^15.6.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2",
     "wrangler": "^3.72.0",
     "zod": "^3.23.8"
   },
