--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.3.4",
+    "@discordjs/rest": "^2.4.3",
     "@hookform/resolvers": "^3.10.0",
     "@neondatabase/serverless": "^0.9.4",
     "@prisma/adapter-neon": "^5.18.0",
@@ -46,6 +47,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "discord-api-types": "^0.37.119",
     "eslint": "^9.14.0",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
