--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-syntax-highlighter": "^15.6.1",
+    "stripe": "^17.7.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
